fix: fixed controller's and more :)
