# Flowcraft/FlowEngine/src/main/java/api/controller/impl/ProcessInstanceController.java
@@ -2,30 +2,44 @@ package api.controller.impl;
 
 import api.Response;
 import api.controller.ControllerSetup;
+import api.service.ProcessInfoService;
 import api.service.ProcessInstanceService;
 import io.javalin.Javalin;
 import io.javalin.http.Context;
+import io.javalin.http.HttpStatus;
+import org.eclipse.jetty.xml.XmlParser;
+import org.jooq.XML;
 
 import java.util.UUID;
 
 public class ProcessInstanceController implements ControllerSetup {
     private final ProcessInstanceService processInstanceService;
+    private final ProcessInfoService processInfoService;
 
-    public ProcessInstanceController(ProcessInstanceService processInstanceService) {
+    public ProcessInstanceController(ProcessInstanceService processInstanceService, ProcessInfoService processInfoService) {
         this.processInstanceService = processInstanceService;
+        this.processInfoService = processInfoService;
     }
 
     @Override
     public void registerEndpoints(Javalin app) {
+        app.get("/", ctx -> {
+            String info = "Javalin web app";
+            System.out.println(info);
+            ctx.result(info);
+            //ctx.json(info);
+        });
         app.get("/process/{processName}/instance/{id}", this::getProcessInstanceById);
-        app.get("/process/{processName}/instance/all", this::getAllProcessInstances);
+        app.get("/process/{processName}/instance", this::getAllProcessInstances);
         app.get("/process/{processName}/diagram", this::getProcessDiagram);
     }
 
     private void getProcessInstanceById(Context ctx) {
         try {
             String processName = ctx.pathParam("processName");
-            UUID id = UUID.fromString(ctx.pathParam("id"));
+            var sId = ctx.pathParam("id");
+            System.out.println(sId);
+            UUID id = UUID.fromString(sId);
 
             var instance = processInstanceService.getProcessInstanceById(processName, id);
             Response.ok(ctx, instance);
@@ -43,10 +57,18 @@ public class ProcessInstanceController implements ControllerSetup {
 
         } catch (IllegalArgumentException e) {
             Response.handleValidationError(ctx, e);
+            e.printStackTrace();
         }
     }
 
     private void getProcessDiagram(Context ctx) {
-        // Реализация получения диаграммы
+       try {
+           String processName = ctx.pathParam("processName");
+           var file = processInfoService.getBpmnFile(processName);
+           Response.ok(ctx, file);
+       } catch (IllegalArgumentException e) {
+           Response.handleValidationError(ctx, e);
+           e.printStackTrace();
+       }
     }
 }
