# Flowcraft/FlowEngine/src/main/resources/openapi.yaml
@@ -134,7 +134,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /process/{processName}/instance/all:
+  /process/{processName}/instance:
     get:
       summary: Process instances info
       description: Return info about all process instances
@@ -201,7 +201,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /process/{processName}/instance/{instanceId}/task/history/all:
+  /process/{processName}/instance/{instanceId}/task/history:
     get:
       summary: Task timeline info
       description: Return timeline info about all tasks
